# drama-catch-up

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  main.py  page-test.py  pixeldrain_downloader.py  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml  release.yml
docs/: README.ru.md
downloads/Beyond the Bar/: Beyond the Bar - S01E10.mkv.part
src/: app.py  config.py  constants.py  downloader.py  scraper.py  utils.py
src/downloaders/: __init__.py  base.py  pixeldrain.py  yt_dlp.py
src/providers/: __init__.py  base.py  filecrypt.py  types.py  viewcrate.py
tests/: test_app.py
